Added composite transform handling to toCssValue; fixed a bug in interpolate, added a bit to the test.

--- a/test-composite-transforms.html
+++ b/test-composite-transforms.html
@@ -58,5 +58,6 @@ var divs = document.querySelectorAll(".anim");
 new Anim(divs[0], {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 0px)"]}, 2);
 new Anim(divs[1], {"-webkit-transform": ["rotate(0deg)", "rotate(90deg)"]}, 2);
 new Anim(divs[2], {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(200px, 0px) rotate(90deg)"]}, 2);
+new Anim(divs[3], {"-webkit-transform": ["rotate(0deg) translate(0px, 0px)", "rotate(90deg) translate(200px, 0px)"]}, 2);
 
 </script>
