Fix handling of null parent

--- a/test-harness.html
+++ b/test-harness.html
@@ -24,6 +24,7 @@ var tests = [
   'test-iterations-fill.html',
   'test-iteration-start.html',
   'test-keyframe-creation.html',
+  'test-parent.html',
   'test-pause.html',
   'test-playback-rate.html',
   'test-seq-speed.html',
