--- a/test-fill-values.html
+++ b/test-fill-values.html
@@ -24,7 +24,7 @@ limitations under the License.
 
 .anim {
 	left: 0px;
-	width: 100px;
+	width: 300px;
 	height: 25px;
 	background-color: #FAA;
 	position: relative;
@@ -104,7 +104,9 @@ for (var i = 0; i < containers.length; i++) {
 	var divs = document.getElementById(containers[i]).getElementsByClassName('anim');
 	for (var j = 0; j < fills.length; j++) {
 		new Anim(divs[2 * j], {left: ["100px", "200px"]}, {iterationCount: 4, direction: directions[i], duration: 1, fill: fills[j]}, undefined, 1);
+          divs[2 * j].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] + " dur: 1";
 		new Anim(divs[2 * j + 1], {left: ["100px", "200px"]}, {iterationCount: 4, direction: directions[i], duration: 0, fill: fills[j]}, undefined, 1);
+          divs[2 * j + 1].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] + " dur: 0";
 	}
 }
 
