--- a/test-compositor.html
+++ b/test-compositor.html
@@ -35,13 +35,13 @@ limitations under the License.
 var rect = document.querySelector(".anim")
 var rect2 = document.querySelector(".anim2")
 
-new Anim(rect, {x: ["0px", "400px"]}, 3);
-new Anim(rect, {x: ["0px", "200px"], operation: 'add'}, {startDelay: 1, duration: 4});
-new Anim(rect, {x: ["0px", "200px"], operation: 'merge'}, {startDelay: 2, duration: 5});
+new Animation(rect, {x: ["0px", "400px"]}, 3);
+new Animation(rect, {x: ["0px", "200px"], operation: 'add'}, {startDelay: 1, duration: 4});
+new Animation(rect, {x: ["0px", "200px"], operation: 'merge'}, {startDelay: 2, duration: 5});
 
-new Anim(rect2, {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 200px)"]}, 3);
-new Anim(rect2, {"-webkit-transform": ["rotate(0deg) translate(0px, 0px)", 
+new Animation(rect2, {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 200px)"]}, 3);
+new Animation(rect2, {"-webkit-transform": ["rotate(0deg) translate(0px, 0px)", 
                                        "rotate(90deg) translate(100px, 0px)"], operation: 'add'}, {startDelay: 1, duration: 4});
-new Anim(rect2, {"-webkit-transform": ["translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)", 
+new Animation(rect2, {"-webkit-transform": ["translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)", 
                                        "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"], operation: 'merge'}, {startDelay: 2, duration: 5});
 </script>
