More tests updated.

--- a/test-iteration-start.html
+++ b/test-iteration-start.html
@@ -110,7 +110,7 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
-  var group = new ParAnimGroup([], {iterationCount: 2, direction: dir, duration: 4}, undefined, 1);
+  var group = new ParGroup([], {iterationCount: 2, direction: dir, duration: 4}, undefined, 1);
   groups.push(group);
 }
 
@@ -118,10 +118,10 @@ for (var i = 0; i < containers.length; i++) {
   var container = document.getElementById(containers[i]);
   <!-- All squares should line up at the end of each iteration (or start if reversed). -->
   <!-- Test basic use. -->
-  new Anim(container.getElementsByClassName("a")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.1, iterationStart: 0.3}, groups[i]);
+  new Animation(container.getElementsByClassName("a")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.1, iterationStart: 0.3}, groups[i]);
   try {
     <!-- Test that iterationStart has a lower bound of zero. -->
-    new Anim(container.getElementsByClassName("b")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4, iterationStart: -0.2}, groups[i]);
+    new Animation(container.getElementsByClassName("b")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4, iterationStart: -0.2}, groups[i]);
   } catch (e) {
     if (e.name == "IndexSizeError") {
       container.getElementsByClassName("b")[0].style["background-color"] = "lightsteelblue";
@@ -129,12 +129,12 @@ for (var i = 0; i < containers.length; i++) {
   }    
   <!-- Test that iterationStart has an upper bound of iterationCount. -->
   <!-- TODO: Revisit this decision. -->
-  new Anim(container.getElementsByClassName("c")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 1.7, iterationStart: 1.8}, groups[i]);
+  new Animation(container.getElementsByClassName("c")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 1.7, iterationStart: 1.8}, groups[i]);
   <!-- Test that nothing odd happens when iterationCount is an integer. -->
-  new Anim(container.getElementsByClassName("d")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.0, iterationStart: 0.4}, groups[i]);
+  new Animation(container.getElementsByClassName("d")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.0, iterationStart: 0.4}, groups[i]);
   <!-- Test that nothing odd happens when (iterationCount - iterationStart) is an integer. -->
-  new Anim(container.getElementsByClassName("e")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.2, iterationStart: 0.2}, groups[i]);
+  new Animation(container.getElementsByClassName("e")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.2, iterationStart: 0.2}, groups[i]);
   <!-- Test that nothing odd happens when (iterationCount + iterationStart) is an integer. -->
-  new Anim(container.getElementsByClassName("f")[0], {left: ["100px", "180px"]}, {duration: 1, iterationCount: 2.8, iterationStart: 0.2}, groups[i]);
+  new Animation(container.getElementsByClassName("f")[0], {left: ["100px", "180px"]}, {duration: 1, iterationCount: 2.8, iterationStart: 0.2}, groups[i]);
 }
 </script>
