--- a/test-iterations-fill.html
+++ b/test-iterations-fill.html
@@ -109,7 +109,7 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
 	var dir = directions[i];
-	var group = new ParAnimGroup([], {startDelay: 1, duration: 8, iterationCount: 3, playbackRate: 2, direction: dir}, undefined, 1);
+	var group = new ParGroup([], {startDelay: 1, duration: 8, iterationCount: 3, playbackRate: 2, direction: dir}, undefined, 1);
 	groups.push(group);
 }
 
@@ -120,9 +120,8 @@ function sampleFunc(timeFraction, iteration, target) {
 for (var i = 0; i < fills.length; i++) {
 	var divs = document.querySelectorAll(categories[i]);
 	for (var j = 0; j < divs.length; j++) {
-		var anim = new Anim(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
-		new Anim(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
+		var anim = new Animation(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
+		new Animation(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
 	}
 }
-// .bDDa
 </script>
