Test expectations for test-playback-rate

--- a/test-playback-rate.html
+++ b/test-playback-rate.html
@@ -26,7 +26,7 @@ limitations under the License.
 	left: 0px;
 	width: 100px;
 	height: 25px;
-	background-color: #FAA;
+	background-color: lightsteelblue;
 	position: relative;
 }
 
@@ -46,7 +46,26 @@ limitations under the License.
 #cd {
 	top: 600px;
 }
+#expectation1 {
+  position: absolute;
+  top: 0px;
+  left: 300px;
+  width: 100px;
+  height: 175px;
+  background: red;
+}
+#expectation2 {
+  position: absolute;
+  top: 200px;
+  left: 0px;
+  width: 100px;
+  height: 175px;
+  background: red;
+}
 </style>
+
+<div id=expectation1></div>
+<div id=expectation2></div>
 
 <div class="animContainer" id="ca">
 	<div class="anim a"></div>
